# solar-advisor-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
advisor/: config.py  governance.py
advisor/agent/: intents.py  supervisor.py
advisor/agent/nodes/: answer.py  classify.py  cost_lookup.py  payback.py
advisor/api/: main.py
advisor/eval/: golden_set.yaml  run.py
advisor/sources/: __init__.py  dsire.py  eia_rates.py  nrel_pvwatts.py  solar_cost_graphql.py
tests/: test_dsire.py  test_eia_rates.py  test_nrel_pvwatts.py  test_solar_cost_graphql.py  test_supervisor.py
